navbar ticky fix, overflow x hidden

--- a/scss/index.sass
+++ b/scss/index.sass
@@ -8,6 +8,13 @@ html,body
     background-attachment: fixed
     background-position: center
     background-size: cover
+    overflow-x: hidden
+
+nav
+    .navbar.sticky-top
+        position: fixed
+        width: 100%
+        top: 0
 
 footer
     text-align: center
